FIX: 예외처리문 추가